--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
         // --- DATA PRODUK ---
         const products = [
             { id: 1, name: "Tahu Ayam", price: 10000, img: "Tahu.jpeg", desc: "Tahu goreng isi ayam Brocita dibuat dari tahu pilihan dengan isian ayam yang lembut, gurih, dan berbumbu pas. Bagian luarnya crispy, dalamnya juicy—sekali coba dijamin nagih" },
-            { id: 2, name: "Tahu Bakso", price: 10000, img: "Tahu.jpeg", desc: "Tahu goreng isi ayam Brocita dibuat dari tahu berkualitas dengan isian ayam cincang yang gurih dan kaya bumbu. Digoreng hingga keemasan, renyah di luar dan lembut di dalam—sekali gigit langsung bikin ketagihan" },
+            { id: 2, name: "Tahu Bakso", price: 10000, img: "Tahu.jpeg", desc: "Tahu Bakso Brocita hadir dengan tahu lembut berisi bakso padat, gurih, dan penuh rasa. Digoreng sampai kecokelatan sempurna, luarnya kriuk, dalamnya kenyal dan juicy—cocok buat camilan kapan aja, sekali coba auto repeat" },
             { id: 3, name: "Tahu Mix", price: 10000, img: "Tahu.jpeg", desc: "Tahu Mix Brocita berisi aneka isian pilihan yang gurih dan lezat, digoreng hingga crispy di luar dan lembut di dalam. Satu porsi, banyak rasa—bikin susah berhenti" },
             { id: 4, name: "Ayam Geprek", price: 20000, img: "Geprek.jpeg", desc: "Nasi ayam geprek Brocita disajikan dengan ayam goreng crispy yang digeprek sambal pedas khas, berpadu dengan nasi hangat pulen. Rasanya gurih, pedasnya nampol, bikin makan makin puas dan nagih" },
             { id: 5, name: "Chicken Steak", price: 20000, img: "Steak.jpeg", desc: "Nasi chicken steak Brocita disajikan dengan ayam steak lembut dan juicy, dilumuri saus spesial yang gurih dan creamy. Dipadukan dengan nasi hangat pulen, bikin setiap suapan terasa puas dan nagih" },
