--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Brocita - Tahu Premium (Private Database)</title>
+    <title>Brocita - Tahu Premium</title>
     <meta name="description" content="Brocita menjual berbagai olahan tahu premium yang lezat, renyah, dan higienis.">
     
     <!-- Google Fonts -->
