--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Brocita - Tahu Premium (Fixed Version)</title>
+    <title>Brocita - Tahu Premium</title>
     <meta name="description" content="Brocita menjual berbagai olahan tahu premium yang lezat, renyah, dan higienis.">
     
     <!-- Google Fonts -->
@@ -766,7 +766,7 @@
 
     <!-- Banner Hari Tutup (Mode tutup Manual) -->
     <div id="closedDayBanner">
-        <i class="fas fa-store-slash"></i> <span id="bannerText">MA'AF, BROCITA SEDANG tutup.</span>
+        <i class="fas fa-store-slash"></i> <span id="bannerText">MA'AF, BROCITA SEDANG TUTUP.</span>
     </div>
 
     <!-- === VIEW PELANGGAN === -->
@@ -887,7 +887,7 @@
             <div class="admin-header-controls">
                 <div>
                     <h2 style="margin:0; color:var(--text-dark);"><i class="fas fa-user-shield"></i> Admin Dashboard</h2>
-                    <p style="margin:5px 0 0; color:var(--text-light); font-size:0.9rem;">Reset & Kontrol Penuh (Manual Mode)</p>
+                    <p style="margin:5px 0 0; color:var(--text-light); font-size:0.9rem;">Reset & Kontrol Penuh</p>
                 </div>
                 <div style="display:flex; gap:10px;">
                     <!-- Tombol Refresh ini sudah diperbaiki -->
@@ -1248,7 +1248,7 @@
             // HANYA CEK: Mode tutup Manual (Hari Rabu SUDAH DIHAPUS)
             if (currentCloudData.isHoliday === true) {
                 isClosed = true;
-                reason = "BROCITA SEDANG tutup.";
+                reason = "BROCITA SEDANG TUTUP.";
             }
 
             // Update Global State
